force-app/main/default/objects/User_Story__c/fields/Parent_Project__c.field-meta.xml
<CustomField>
    <fullName>Parent_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>User Stories (Parent Project)</relationshipLabel>
    <relationshipName>User_Stories_From_Child_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>