force-app/main/default/objects/User_Story__c/fields/Story_Points__c.field-meta.xml
<CustomField>
    <fullName>Story_Points__c</fullName>
    <inlineHelpText>Story Points must follow the Fibonacci sequence (1, 2, 3, 5, 8, 13, etc.) to represent increasing complexity and effort. Choose the nearest appropriate number that best represents the effort required for this user story.</inlineHelpText>
    <label>Story Points</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>