force-app/main/default/objects/User_Story__c/fields/User_Story__c.field-meta.xml
<CustomField>
    <fullName>User_Story__c</fullName>
    <inlineHelpText>Example: As a sales rep, I want to see lead details on one screen, so that I can quickly assess potential clients.</inlineHelpText>
    <label>User Story</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>