force-app/main/default/objects/User_Story__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Due_Date__c</columns>
    <columns>User_Story__c</columns>
    <columns>Status__c</columns>
    <columns>Related_Project__c</columns>
    <columns>Parent_Project__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>